[gd_scene load_steps=17 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://PlayerCamera.gd" type="Script" id=2]
[ext_resource path="res://BackgroundScoller.gd" type="Script" id=3]
[ext_resource path="res://art/PressStart2P-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://hp_tracker.gd" type="Script" id=5]
[ext_resource path="res://UI.gd" type="Script" id=6]
[ext_resource path="res://Spawner.gd" type="Script" id=7]
[ext_resource path="res://new_theme.tres" type="Theme" id=8]
[ext_resource path="res://background.tscn" type="PackedScene" id=9]
[ext_resource path="res://Seed.tscn" type="PackedScene" id=10]
[ext_resource path="res://SeedTracker.gd" type="Script" id=11]
[ext_resource path="res://assets/Fantasy_Game_Background_Looping.mp3" type="AudioStream" id=12]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -292, -170, 0, 0, 0, 0, -296, 169, 0, 0, 0, 0, 286, 171, 0, 0, 0, 0, 285, -170, 0, 0, 0, 0, -292, -170 )
}

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Main" type="Node"]

[node name="InfiniteBackground" type="Node" parent="."]

[node name="BackgroundScoller" type="Node" parent="InfiniteBackground"]
script = ExtResource( 3 )

[node name="Background" parent="InfiniteBackground" instance=ExtResource( 9 )]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="PlayerCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_speed = 1.0
script = ExtResource( 2 )

[node name="Spawner" type="Path2D" parent="PlayerCamera"]
self_modulate = Color( 0.501961, 0.6, 1, 0.701961 )
position = Vector2( -11.5739, 0.287415 )
scale = Vector2( 1.28522, 1.42522 )
curve = SubResource( 1 )
script = ExtResource( 7 )

[node name="PathFollow2D" type="PathFollow2D" parent="PlayerCamera/Spawner"]
position = Vector2( -292, -170 )
rotation = 1.5826

[node name="SpawnTimer" type="Timer" parent="PlayerCamera/Spawner"]
wait_time = 1.5
autostart = true

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="hp_label" type="Label" parent="UI"]
margin_left = 24.0
margin_top = 24.0
margin_right = 108.0
margin_bottom = 38.0
theme = ExtResource( 8 )
text = "HP: 100"

[node name="seeds_label" type="Label" parent="UI"]
margin_left = 24.0
margin_top = 48.0
margin_right = 120.0
margin_bottom = 62.0
theme = ExtResource( 8 )
text = "SEEDS: 0"

[node name="DeathScreen" type="ColorRect" parent="UI"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.517647 )

[node name="Label" type="Label" parent="UI/DeathScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.0
margin_top = -108.0
margin_right = 149.0
margin_bottom = -74.0
theme = ExtResource( 8 )
custom_fonts/font = SubResource( 2 )
text = "You died."

[node name="Label2" type="Label" parent="UI/DeathScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -162.5
margin_top = -8.0
margin_right = 162.5
margin_bottom = 8.0
theme = ExtResource( 8 )
text = "Press enter to start again."

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/DeathScreen"]
playback_speed = 4.0
anims/RESET = SubResource( 3 )
anims/fade_in = SubResource( 4 )

[node name="hp_tracker" type="Node" parent="."]
script = ExtResource( 5 )

[node name="SeedTracker" type="Node" parent="."]
script = ExtResource( 11 )

[node name="Seed" parent="." instance=ExtResource( 10 )]
position = Vector2( -120, 64 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -20.0
autoplay = true

[connection signal="player_hit" from="Player" to="PlayerCamera" method="_on_Player_player_hit"]
[connection signal="player_hit" from="Player" to="hp_tracker" method="_on_Player_player_hit"]
[connection signal="seed_collected" from="Player" to="SeedTracker" method="_on_Player_seed_collected"]
[connection signal="timeout" from="PlayerCamera/Spawner/SpawnTimer" to="PlayerCamera/Spawner" method="_on_SpawnTimer_timeout"]
[connection signal="hp_changed" from="hp_tracker" to="UI" method="_on_hp_tracker_hp_changed"]
[connection signal="seeds_changed" from="SeedTracker" to="UI" method="_on_SeedTracker_seeds_changed"]
